--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ayana-ai:-the-personal-software-factory",
+  "name": "ayana-ai-factory",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,17 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "@google/genai": "^1.40.0",
-    "lucide-react": "^0.563.0",
-    "@codesandbox/sandpack-react": "^2.20.0",
-    "octokit": "^4.0.2"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "lucide-react": "latest",
+    "@codesandbox/sandpack-react": "latest",
+    "ai": "latest",
+    "@ai-sdk/google": "latest"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@vitejs/plugin-react": "latest",
+    "vite": "latest",
+    "typescript": "latest"
   }
 }
