--- a/package.json
+++ b/package.json
@@ -1,24 +1,13 @@
 {
-  "name": "ayana-ai-factory",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "vite": "latest",
+    "@vitejs/plugin-react": "latest"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "lucide-react": "latest",
-    "@codesandbox/sandpack-react": "latest",
-    "ai": "latest",
-    "@ai-sdk/google": "latest"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "latest",
-    "vite": "latest",
-    "typescript": "latest"
   }
 }
