Update package.json with project details and dependencies
Added project metadata and updated dependencies.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "vite": "latest",
-    "@vitejs/plugin-react": "latest"
-  },
+  "name": "ayana-ai-factory",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "lucide-react": "latest",
+    "@codesandbox/sandpack-react": "latest",
+    "ai": "latest",
+    "@ai-sdk/google": "latest",
+    "vite": "latest",
+    "@vitejs/plugin-react": "latest"
   }
 }
